<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarPerfilActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textAlignment="center"
        android:text="@string/editar_perfil"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_centerInParent="true"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/iv_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="18dp"
                android:text="@string/nombre"/>

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="18dp"
                android:text="@string/apellido_paterno"/>

            <EditText
                android:id="@+id/et_apellido_paterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="18dp"
                android:text="@string/apellido_materno"/>

            <EditText
                android:id="@+id/et_apellido_materno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="18dp"
                android:text="@string/curp"/>

            <EditText
                android:id="@+id/et_curp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="18dp"
                android:text="@string/no_de_licencia"/>

            <EditText
                android:id="@+id/et_no_licencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="18dp"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="18dp"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="18dp"
                android:text="@string/fotografia"/>

            <Button
                android:id="@+id/btn_subir_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/subir_foto"/>
            <TextView
                android:id="@+id/tv_foto_seleccionada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="12dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/btn_guardar"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/guardar"/>

                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/red"
                    android:text="@string/cancelar"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>





</LinearLayout>