<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fast_time"
        android:textSize="55dp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="55dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/dark_pruple">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/email"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/password"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:textSize="20dp"
            android:text="@string/ingresar"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"/>
    </LinearLayout>

</LinearLayout>