<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_pruple"
        android:layout_marginBottom="2dp">
        <LinearLayout
            android:id="@+id/ll_envio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_guía"
                android:textStyle="bold"
                android:textSize="11sp"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/tv_numero_guia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sin_datos"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion_de_destino"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="11sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/tv_destino_envio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sin_datos"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/estatus"
                android:textStyle="bold"
                android:textSize="11sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/tv_estatus_envio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sin_datos"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>