<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/fast_time"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_centerInParent="true"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/iv_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_alignTop="@id/rl_title">
        <TextView
            android:id="@+id/tv_nombre_completo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Nombre"/>

        <ImageView
            android:id="@+id/iv_perfil_grande"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/tv_correo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginStart="12dp"
                android:textSize="20sp"
                android:text="@string/email"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:text="@string/no_personal"/>

            <TextView
                android:id="@+id/tv_no_personal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginStart="12dp"
                android:textSize="20sp"
                android:text="@string/no_personal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:text="@string/curp"/>

            <TextView
                android:id="@+id/tv_curp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginStart="12dp"
                android:textSize="20sp"
                android:text="@string/curp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:text="@string/no_de_licencia"/>

            <TextView
                android:id="@+id/tv_no_licencia"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginStart="12dp"
                android:textSize="20sp"
                android:text="@string/no_de_licencia"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_gray"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/btn_envios"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"
            android:backgroundTint="@color/gray"
            android:text="@string/envios"/>

        <Button
            android:id="@+id/btn_editar_perfil"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"
            android:text="@string/editar_perfil"/>
    </RelativeLayout>



</RelativeLayout>